--- a/pom.xml
+++ b/pom.xml
@@ -61,4 +61,11 @@
 	    </plugins>
 	</build>
   
+  <distributionManagement>
+    <snapshotRepository>
+      <id>snapshots</id>
+      <url>http://nexus.ulane.top/nexus/content/repositories/snapshots</url>
+    </snapshotRepository>
+  </distributionManagement>
+  
 </project>
